--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,23 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DBIx-DBH
-version:      0.11
-version_from: lib/DBIx/DBH.pm
-installdirs:  site
+--- #YAML:1.0
+name:               DBIx-DBH
+version:            0.3
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    DBI:                           1.3
-    Params::Validate:              0.7
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    DBI:               1.3
+    Moose:             1
+    Params::Validate:  0.7
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
